force-app/main/default/objects/CurrentInventoryLine__c/CurrentInventoryLine__c.object-meta.xml
<CustomObject>
    <label>現在庫明細</label>
    <nameField>
        <displayFormat>CIVL{000000000}</displayFormat>
        <label>現在庫明細名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>