force-app/main/default/objects/CurrentInventoryLine__c/fields/current_inventory__c.field-meta.xml
<CustomField>
    <fullName>current_inventory__c</fullName>
    <label>現在庫</label>
    <referenceTo>CurrentInventory__c</referenceTo>
    <relationshipLabel>現在庫明細</relationshipLabel>
    <relationshipName>current_inventory_lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>