force-app/main/default/objects/CurrentInventoryLine__c/fields/expiration_date__c.field-meta.xml
<CustomField>
    <fullName>expiration_date__c</fullName>
    <label>賞味期限</label>
    <type>Date</type>
</CustomField>