force-app/main/default/objects/CurrentInventoryLine__c/fields/remaining_quantity__c.field-meta.xml
<CustomField>
    <fullName>remaining_quantity__c</fullName>
    <formula>original_quantity__c - shipped_quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>残数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>