force-app/main/default/objects/CurrentInventoryLine__c/fields/shipped_quantity__c.field-meta.xml
<CustomField>
    <fullName>shipped_quantity__c</fullName>
    <label>出庫数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>